src/app/pages/admin/admin.component.scss
@use "../../../styles" as *;
@use "../perfil/perfil.component.scss";

.conv-lista {
  display: flex;
  flex-direction: column;
}

.conv-item {
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-areas:
    "nombre acciones"
    "detalle acciones"
    "footer footer";
  gap: 0 16px;
  padding: 16px 0;
  border-bottom: 1px solid $color-borde;
  align-items: start;

  &:first-child {
    padding-top: 0;
  }
  &:last-child {
    border-bottom: none;
  }
}

.conv-nombre {
  grid-area: nombre;

  p {
    font-size: 12px;
    font-weight: 500;
    margin-bottom: 4px;
  }

  .conv-fecha-pub {
    font-size: 12px;
    color: $color-texto;
    font-weight: 400;
  }
}

.conv-acciones {
  grid-area: acciones;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-end;
  align-self: stretch;
}

.conv-detalle-admin {
  grid-area: detalle;
  padding-top: 8px;

  .conv-fecha-pub {
    font-size: 12px;
    color: $color-texto;
    font-weight: 400;
    margin-bottom: 4px;
  }

  .web-link {
    font-size: 12px;
    color: $color-texto;
    text-decoration: none;
    display: inline-block;
    margin-top: 4px;
    &:hover {
      text-decoration: underline;
    }
  }
}

.conv-footer {
  grid-area: footer;
  padding-top: 6px;
}

.btn-aprobar {
  font-family: $fuente-mono;
  font-size: 12px;
  color: $color-texto;
  background: $color-acento;
  border: none;
  cursor: pointer;
  padding: 4px 8px;

  &:hover {
    border: 1px solid $color-texto;
    padding: 6px 12px;
  }
}

.btn-eliminar-conv {
  font-family: $fuente-mono;
  font-size: 12px;
  color: $color-texto;
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  text-decoration: underline;
  &:hover {
    text-decoration: none;
  }
}

.btn-ver-mas {
  font-family: $fuente-mono;
  font-size: 12px;
  color: $color-texto-secundario;
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  &:hover {
    text-decoration: underline;
  }
}

.placeholder {
  color: $color-texto-secundario;
}

